# HelixAlign

./: .gitignore  Cargo.toml  README.en.md  README.md  README.zh.md  test_query.fa  test_ref.fa
src/: algorithms.rs  genomic_stats.rs  lib.rs  main.rs  nucmer.rs  output_format.rs  sequence.rs  suffix_array.rs
